--- a/src/css/common.css
+++ b/src/css/common.css
@@ -5,10 +5,10 @@
 
 body 
 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #fafafa;
+    background-color: teal;
     color: #212121;
     line-height: 1.5;
 }
@@ -19,61 +19,48 @@ img
     max-width: 100%;
 }
 
-#datetime-picker 
+.nav__link 
 {
-    text-align: center;
-    border: solid #000 3px;
-    border-radius: 10px;
-    padding: 20px 0;
-    margin-right: 40px;
-    font-size: 1.5em;
+    display: inline-block;
+    margin: 2px;
+    padding: 5px;
+
+    font-size: 20px;
+    color: white;
+
+    border-radius: 5px;
+    background-color: teal;
+    transition: color 250ms linear, background-color 250ms linear;
 }
-  
-button[data-start] 
+
+.nav__link:hover,
+.nav__link:focus 
 {
-    padding: 15px 25px;
-    border: solid rgb(131, 133, 8) 3px;
-    border-radius: 10px;
-    background-color: rgb(255, 251, 0);
-    font-size: 1em;
-    font-weight: 900;
-    text-transform: uppercase;
+    color: teal;
+    background-color: white;
 }
-button[data-stop] 
-{
-    padding: 15px 25px;
-    border: solid rgb(131, 133, 8) 3px;
-    border-radius: 10px;
-    background-color: rgb(255, 0, 0);
-    font-size: 1em;
-    font-weight: 900;
-    text-transform: uppercase;
-}
-  
+
 .timer 
 {
     display: flex;
-    justify-content: center;
-    padding-top: 20px;
-    background-color: rgb(0, 76, 240);
+    gap: 25px;
 }
-  
+
 .field 
 {
-    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.field .value 
+
+.value 
 {
-    font-size: 3em;
-    color: #f6fa00;
+    font-size: 60px;
+    font-weight: 600;
 }
-  
-.field .label 
+
+.label 
 {
-    color: #00c0e2;
-}
-  
-.field:not(:last-child) 
-{
-    margin-right: 40px;
+    font-size: 20px;
+    font-weight: 500;
 }
